SD-124: implement auditing logic

--- a/src/main/resources/webui/index.html
+++ b/src/main/resources/webui/index.html
@@ -20,8 +20,8 @@
             <button class="navbar-metamask-button">?</button>
         </div>
         <div class="content-div">
-            <div id="auditing-div" class="hidden-div">
-                <div id="auditing-content"></div>
+            <div id="auditing-div">
+                <div id="auditing-output-div"></div>
                 <div id="auditing-assets">
                     <div class="available-assets-div">
                         <label for="assets-available-for-audit">Assets available for audit</label>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </div>
-            <div id="script-development-div">
+            <div id="script-development-div" class="hidden-div">
                 <div id="script-content">
                     <div id="script-source-div">
                         <div class="script-source-label-div">
