SD-124: update example auditing script

--- a/examples/audit-croatia/step-2.html
+++ b/examples/audit-croatia/step-2.html
@@ -12,4 +12,5 @@
         listu'</b> which should contain one field:</p>
     <p><b>'Broj posjedovnog lista'</b> which should be empty and next to the <b>'Traži'</b> button.</p>
     <p>Below the two form groups there should be two tables.</p>
+    <img src="{image1}" alt="image1">
 </div>
