--- a/examples/audit-croatia/step-4.html
+++ b/examples/audit-croatia/step-4.html
@@ -1,8 +1,11 @@
 <div>
     <p>The value you should input into the <b>'Traži'</b> field is:</p>
     <h2>{cadastralOffice}</h2>
+    <img src="{image1}" alt="image1">
     <p>After entering the value, press on the magnifying glass next to the <b>'Traži'</b> field. If everything went as
         expected, you should now see some value in the <b>'Katastarski ured'</b> field.</p>
+    <img src="{image2}" alt="image2">
     <p><b>Note:</b> The value you entered may be a bit different from the one you got back. This is fine as long as the
         value you got back contains at least part of the value you entered.</p>
+    <img src="{image3}" alt="image3">
 </div>
