--- a/examples/audit-croatia/step-6.html
+++ b/examples/audit-croatia/step-6.html
@@ -4,8 +4,11 @@
     <p><b>OR</b> the municipality number:</p>
     <h2>{cadastralMunicipalityNumber}</h2>
     <p>but not both at once.</p>
+    <img src="{image1}" alt="image1">
     <p>After entering the value, press on the magnifying glass next to the <b>'Traži'</b> field. If everything went as
         expected, you should now see some value in the <b>'Katastarska općina'</b> field.</p>
+    <img src="{image2}" alt="image2">
     <p><b>NOTE:</b> The value you entered may be a bit different from the one you got back. This is fine as long as the
         municipality number matches the requested search value: <b>{cadastralMunicipalityNumber}</b>.</p>
+    <img src="{image3}" alt="image3">
 </div>
