--- a/examples/audit-croatia/step-7.html
+++ b/examples/audit-croatia/step-7.html
@@ -5,8 +5,11 @@
     <h2>{parcelNumber}</h2>
     <p>And for <b>'Podbroj'</b> field, enter the value:</p>
     <h2>{parcelSubNumber}</h2>
+    <img src="{image1}" alt="image1">
     <p>Finally, after you have entered the values, click on the <b>'Traži'</b> button next to those two fields.</p>
+    <img src="{image2}" alt="image2">
     <p>After clicking on the <b>'Traži'</b> button, you may be prompted to input a captcha. Enter the value you see into
         the pop-up field and then click on <b>'Potvrdi'</b> button inside the window. If you enter the incorrect value,
         you will be prompted with another captcha.</p>
+    <img src="{image3}" alt="image3">
 </div>
