--- a/examples/audit-croatia/step-8.html
+++ b/examples/audit-croatia/step-8.html
@@ -4,4 +4,5 @@
     <p>This button is the middle one of the three buttons available above the first table.</p>
     <p>After clicking on the button you will be prompted with another captcha. Fill it in correctly and then you should
         be presented with a PDF document.</p>
+    <img src="{image1}" alt="image1">
 </div>
