--- a/examples/audit-croatia/step-5.html
+++ b/examples/audit-croatia/step-5.html
@@ -1,6 +1,8 @@
 <div>
     <p>Next, input the value for <b>'Katastarska općina'</b> field. This field also has a search option - click on the
         magnifying glass to open the search.</p>
+    <img src="{image1}" alt="image1">
     <p>When the search is opened you should see a field titled <b>'Traži'</b> and below it there should be a list of
         entries under a column titled <b>'Naziv'</b>.</p>
+    <img src="{image2}" alt="image2">
 </div>
