SD-124: add favicon

--- a/src/main/resources/webui/index.html
+++ b/src/main/resources/webui/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Auditor Node</title>
         <meta charset="UTF-8">
+        <link rel="icon" type="image/png" href="/webui/favicon.png">
         <link rel="stylesheet" href="/webui/css/main.css">
         <link rel="stylesheet" href="/webui/css/metamask.css">
         <link rel="stylesheet" href="/webui/css/navigation.css">
